--- a/sass/blocks/feature.scss
+++ b/sass/blocks/feature.scss
@@ -51,10 +51,6 @@
     padding-bottom: 2px;
   }
 
-  .feature__br {
-    display: none;
-  }
-
 }
 
 @media #{$desktop} {
