--- a/sass/blocks/photo-page.scss
+++ b/sass/blocks/photo-page.scss
@@ -52,6 +52,7 @@
   .photo-page__wrapper {
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
 
 }
